--- a/Contracts/MissionProgression.cfg
+++ b/Contracts/MissionProgression.cfg
@@ -14,13 +14,13 @@ CONTRACT_TYPE
     minExpiry = 760 
     maxExpiry = 760 
     deadline = 8760 
-    cancellable = false
+    cancellable = true // True for debug
     declinable = true
-    autoAccept = true
+    autoAccept = false // False for debug
     completedMessage = Mission progression updated.
     prestige = Exceptional
-    maxCompletions = 1
-    maxSimultaneous = 1
+    // maxCompletions = 1 // disabled for debug
+    // maxSimultaneous = 1
     
     REQUIREMENT
     {
@@ -505,7 +505,7 @@ CONTRACT_TYPE
             name = PathfinderComms
             type = All
             title = Communications Technology (RFP1.1a)
-            hideChildren = true
+            // hideChildren = true
             optional = false
             
             REQUIREMENT
@@ -521,7 +521,7 @@ CONTRACT_TYPE
             name = PathfinderLanding
             type = All
             title = Precision Landing Technology (RFP1.1b)
-            hideChildren = true
+            // hideChildren = true
             optional = false
             
             REQUIREMENT
@@ -537,7 +537,7 @@ CONTRACT_TYPE
             name = PathfinderReusable
             type = All
             title = Reusable Launch Technology (RFP1.1c)
-            hideChildren = true
+            // hideChildren = true
             optional = false
             
             REQUIREMENT
@@ -553,7 +553,7 @@ CONTRACT_TYPE
             name = PathfinderOrbital
             type = All
             title = Orbital Platform Technology (RFP1.1d)
-            hideChildren = true
+            // hideChildren = true
             optional = false
             
             REQUIREMENT
@@ -569,7 +569,7 @@ CONTRACT_TYPE
             name = PathfinderISRU
             type = All
             title = Resource Extraction Technology (RFP1.1e)
-            hideChildren = true
+            // hideChildren = true
             optional = false
             
             REQUIREMENT
@@ -594,7 +594,7 @@ CONTRACT_TYPE
             name = DeploymentOrbital
             type = All
             title = Duna Orbital Operations (RF1.1a)
-            hideChildren = true
+            // hideChildren = true
             optional = false
             
             REQUIREMENT
@@ -610,7 +610,7 @@ CONTRACT_TYPE
             name = DeploymentComms
             type = All
             title = Duna Communications Network (RF1.1b)
-            hideChildren = true
+            // hideChildren = true
             optional = false
             
             REQUIREMENT
@@ -626,7 +626,7 @@ CONTRACT_TYPE
             name = DeploymentSurface
             type = All
             title = Duna Surface Survey (RF1.1c)
-            hideChildren = true
+            // hideChildren = true
             optional = false
             
             REQUIREMENT
@@ -642,7 +642,7 @@ CONTRACT_TYPE
             name = DeploymentISRU
             type = All
             title = Ike Resource Operations (RF1.1d)
-            hideChildren = true
+            // hideChildren = true
             optional = false
             
             REQUIREMENT
@@ -659,7 +659,7 @@ CONTRACT_TYPE
         name = RF1_1_Complete
         type = All
         title = RF1.1 Mission Complete - Advance to RF1.2
-        hideChildren = true
+        // hideChildren = true
         completeInSequence = true
         optional = false
 
@@ -791,80 +791,80 @@ BEHAVIOUR
 }
 
 // RFP1.4 Pathfinder Completions
-    BEHAVIOUR
+BEHAVIOUR
+{
+    name = PathfinderTracking_RFP1_4
+    type = Expression
+    
+    CONTRACT_COMPLETED_SUCCESS
     {
-        name = PathfinderTracking_RFP1_4
-        type = Expression
-    
-        CONTRACT_COMPLETED_SUCCESS
-        {
-            contractType = RFP1_4a_KerbinGateway
-            rfp1_4a_completed = true
-            $GLOBAL_orbitalLogisticsHub_template_proven = true
-            @/status_message = "RFP1.4a COMPLETE - Kerbin Gateway Station established\nRFP1.4b: Available - Precision atmospheric entry\n\nOrbital Logistics Hub Role template established. Phase 2 operational paradigm validated."
-        }
-    
-        CONTRACT_COMPLETED_SUCCESS
-        {
-            contractType = RFP1_4b_PrecisionEntry
-            rfp1_4b_completed = true
-            $GLOBAL_precisionEntry_template_proven = true
-            @/status_message = "RFP1.4b COMPLETE - Precision atmospheric entry validated\nRFP1.4c: Available - Superheavy launch system\n\nPrecision Entry Role template established. Direct surface module delivery capability proven."
-        }
-    
-        CONTRACT_COMPLETED_SUCCESS
-        {
-            contractType = RFP1_4c_SuperheavyLaunch
-            rfp1_4c_completed = true
-            $GLOBAL_superheavyLaunch_template_proven = true
-            @/status_message = "RFP1.4 PATHFINDER PHASE COMPLETE\n\nPhase 2 preparation technologies validated:\n\n✓ Orbital Logistics Hub Role - Gateway Station operations\n✓ Precision Entry Role - Direct surface delivery\n✓ Superheavy Launch Role - Fully-loaded vehicle deployment\n\nRF1.4 deployment missions now available for Phase 1 finale operations."
-            @/current_phase = "PHASE 1: RF1.4 DEPLOYMENT - FINALE OPERATIONS"
-        }
+        contractType = RFP1_4a_KerbinGateway
+        rfp1_4a_completed = true
+        $GLOBAL_orbitalLogisticsHub_template_proven = true
+        @/status_message = "RFP1.4a COMPLETE - Kerbin Gateway Station established\nRFP1.4b: Available - Precision atmospheric entry\n\nOrbital Logistics Hub Role template established. Phase 2 operational paradigm validated."
     }
+    
+    CONTRACT_COMPLETED_SUCCESS
+    {
+        contractType = RFP1_4b_PrecisionEntry
+        rfp1_4b_completed = true
+        $GLOBAL_precisionEntry_template_proven = true
+        @/status_message = "RFP1.4b COMPLETE - Precision atmospheric entry validated\nRFP1.4c: Available - Superheavy launch system\n\nPrecision Entry Role template established. Direct surface module delivery capability proven."
+    }
+    
+    CONTRACT_COMPLETED_SUCCESS
+    {
+        contractType = RFP1_4c_SuperheavyLaunch
+        rfp1_4c_completed = true
+        $GLOBAL_superheavyLaunch_template_proven = true
+        @/status_message = "RFP1.4 PATHFINDER PHASE COMPLETE\n\nPhase 2 preparation technologies validated:\n\n✓ Orbital Logistics Hub Role - Gateway Station operations\n✓ Precision Entry Role - Direct surface delivery\n✓ Superheavy Launch Role - Fully-loaded vehicle deployment\n\nRF1.4 deployment missions now available for Phase 1 finale operations."
+        @/current_phase = "PHASE 1: RF1.4 DEPLOYMENT - FINALE OPERATIONS"
+    }
+}
 
 // =============================================================================
 // DEPLOYMENT ROLE VALIDATION TRACKING
 // =============================================================================
 
 // RF1.1 Deployment Role Establishment
-    BEHAVIOUR
+BEHAVIOUR
+{
+    name = DeploymentRoleTracking_RF1_1
+    type = Expression
+    
+    CONTRACT_COMPLETED_SUCCESS
     {
-        name = DeploymentRoleTracking_RF1_1
-        type = Expression
-    
-        CONTRACT_COMPLETED_SUCCESS
-        {
-            contractType = RF1_1a_DunaOrbitalOps
-            rf1_1a_completed = true
-            $GLOBAL_dunaStation_scienceStationRole = true
-             @/status_message = "RF1.1a COMPLETE - Duna orbital science station operational. Concurrent deployment missions in progress."
-        }
-    
-        CONTRACT_COMPLETED_SUCCESS
-        {
-            contractType = RF1_1b_DunaCommsNetwork
-            rf1_1b_completed = true
-            $GLOBAL_dunaCommHub_communicationsRole = true
-            @/status_message = "RF1.1b COMPLETE - Duna communications network established. System-wide coverage operational."
-        }
-    
-        CONTRACT_COMPLETED_SUCCESS
-        {
-            contractType = RF1_1c_DunaSurfaceSurvey
-            rf1_1c_completed = true
-            $GLOBAL_dunaProbes_surfaceOpsRole = true
-            @/status_message = "RF1.1c COMPLETE - Surface probe network deployed across multiple biomes. Surface science operations established."
-        }
-    
-        CONTRACT_COMPLETED_SUCCESS
-        {
-            contractType = RF1_1d_IkeResourceOps
-            rf1_1d_completed = true
-            $GLOBAL_ikeResourceFacility_resourceProductionRole = true
-            rf1_1_allcomplete = (@/rf1_1a_completed && @/rf1_1b_completed && @/rf1_1c_completed && @/rf1_1d_completed)
-            @/status_message = "RF1.1 DEPLOYMENT COMPLETE\n\nAll Duna system infrastructure successfully established:\n\n✓ Orbital Science Station - Research operations active\n✓ Communications Network - System-wide coverage operational\n✓ Surface Probe Network - Multi-biome science operations\n✓ Ike Resource Facility - Fuel production capability established\n\nDuna system infrastructure deployment successful. Pathfinder missions for RF1.2 drilling and sample return technology now available."
-            @/current_phase = "PHASE 1: RF1.2 PATHFINDER DEVELOPMENT - DRILLING TECHNOLOGY"
-        }
+        contractType = RF1_1a_DunaOrbitalOps
+        rf1_1a_completed = true
+        $GLOBAL_dunaStation_scienceStationRole = true
+        @/status_message = "RF1.1a COMPLETE - Duna orbital science station operational. Concurrent deployment missions in progress."
     }
+    
+    CONTRACT_COMPLETED_SUCCESS
+    {
+        contractType = RF1_1b_DunaCommsNetwork
+        rf1_1b_completed = true
+        $GLOBAL_dunaCommHub_communicationsRole = true
+        @/status_message = "RF1.1b COMPLETE - Duna communications network established. System-wide coverage operational."
+    }
+    
+    CONTRACT_COMPLETED_SUCCESS
+    {
+        contractType = RF1_1c_DunaSurfaceSurvey
+        rf1_1c_completed = true
+        $GLOBAL_dunaProbes_surfaceOpsRole = true
+        @/status_message = "RF1.1c COMPLETE - Surface probe network deployed across multiple biomes. Surface science operations established."
+    }
+    
+    CONTRACT_COMPLETED_SUCCESS
+    {
+        contractType = RF1_1d_IkeResourceOps
+        rf1_1d_completed = true
+        $GLOBAL_ikeResourceFacility_resourceProductionRole = true
+        rf1_1_allcomplete = (@/rf1_1a_completed && @/rf1_1b_completed && @/rf1_1c_completed && @/rf1_1d_completed)
+        @/status_message = "RF1.1 DEPLOYMENT COMPLETE\n\nAll Duna system infrastructure successfully established:\n\n✓ Orbital Science Station - Research operations active\n✓ Communications Network - System-wide coverage operational\n✓ Surface Probe Network - Multi-biome science operations\n✓ Ike Resource Facility - Fuel production capability established\n\nDuna system infrastructure deployment successful. Pathfinder missions for RF1.2 drilling and sample return technology now available."
+        @/current_phase = "PHASE 1: RF1.2 PATHFINDER DEVELOPMENT - DRILLING TECHNOLOGY"
+    }
+}
 
 }
