--- a/Contracts/RF1_1d_IkeResourceOps.cfg
+++ b/Contracts/RF1_1d_IkeResourceOps.cfg
@@ -1,88 +1,121 @@
 CONTRACT_TYPE
 {
-    name = RFP1_1d_OrbitalPlatform
-    title = RFP1.1d: "Orbital Platform Technology"
+    name = RF1_1d_IkeResourceOps
+    title = RF1.1d: "Ike Resource Operations"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Orbital Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Modular Station Architecture Validation\n\nThe Duna orbital science station will serve as the cornerstone of our interplanetary operations, requiring sophisticated modular design and autonomous assembly capabilities. Before deploying this critical infrastructure across interplanetary distances, we must validate our station architecture and assembly procedures.\n\nThis pathfinder mission will test our modular station design in Kerbin orbit, where we can monitor assembly operations closely and refine procedures before interplanetary deployment. The station must demonstrate extended autonomous operations, docking procedures, and crew support capabilities.\n\nYour objective is to design and deploy a prototype science station that validates our modular architecture, demonstrates reliable docking operations, and proves extended operational capability through sustained power generation and science processing.
+    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Resource Utilization Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Ike Resource Extraction Facility Deployment\n\nThe Duna transfer window is now open. Your objective is to establish resource extraction operations on Ike using the proven ISRU technology validated in RFP1.1e on Minmus.\n\nThis facility will provide fuel production capability to support sustained operations throughout the Duna system, reducing dependency on supply missions from Kerbin. The ISRU technology has been thoroughly tested and proven capable of reliable autonomous operation.\n\nDeploy the validated resource extraction configuration to establish our first interplanetary fuel production facility, creating the foundation for truly sustainable operations beyond Kerbin's sphere of influence.
     
-    notes = Technology Validation Requirements:\n\nModular Station Architecture\nDeploy prototype science station to Kerbin orbit demonstrating modular design principles and component integration.\n\nDocking Operations Validation\nDemonstrate docking operations with supply craft to prove orbital assembly and logistics capabilities.\n\nPower Generation and Science Processing\nTest power generation and science processing systems under extended operation conditions.\n\nExtended Operations Capability\nMaintain station operations for 30 days to validate long-duration autonomous capability and system reliability.
+    notes = Deployment Requirements:\n\nISRU Systems Deployment\nDeploy proven ISRU technology (RFP1.1e) to Ike surface for ore extraction and fuel production capability.\n\nFuel Production Operations\nDemonstrate ore extraction and fuel production using validated systems and procedures.\n\nResource Storage Infrastructure\nCreate storage and distribution infrastructure for processed materials and produced fuel.\n\nAutonomous Operations\nEstablish autonomous operation capability essential for sustained interplanetary presence.
     
-    synopsis = Validate modular orbital station architecture and assembly operations before interplanetary deployment.
+    synopsis = Deploy proven ISRU technology to establish Ike resource extraction and fuel production facility.
     
-    completedMessage = Exceptional work! The orbital platform technology has been comprehensively validated. Modular station architecture, docking operations, and extended autonomous capability all proven successful. The technology is ready for Duna deployment. RFP1.1e is now available.
+    completedMessage = Ike resource operations successfully established! ISRU facility operational with proven fuel production capability. Sustainable operations foundation created for long-term Duna system presence.
     
     // Contract parameters
     agent = Lowne Aerospace
     group = RedFrontier
     
-    // Contract requirements
-    minExpiry = 1460
-    maxExpiry = 1460
-    deadline = 365
+    // Contract requirements - transfer window timing
+    minExpiry = 730
+    maxExpiry = 730
+    deadline = 547
     cancellable = true
     declinable = true
     autoAccept = true
-    prestige = Trivial
+    prestige = Significant
     maxCompletions = 1
     maxSimultaneous = 1
     
-    // Available after RFP1.1c completion
+    // Available after all pathfinders complete
     REQUIREMENT
     {
         name = CompleteContract
         type = CompleteContract
-        contractType = RFP1_1c_ReusableLaunch
+        contractType = RFP1_1e_ResourceExtraction
     }
     
-    // Rewards - pathfinder level
-    advanceFunds = 80000.0
-    rewardFunds = 160000.0
+    // Verify ISRU technology was validated
+    
+    // Rewards - deployment mission level
+    advanceFunds = 130000.0
+    rewardFunds = 260000.0
     rewardScience = 250.0
-    rewardReputation = 35.0
+    rewardReputation = 60.0
     
     // Target Body
-    targetBody = Minmus
+    targetBody = Ike
     
-    // Science Station Role template establishment
+    // Establish Resource Facility Role reference for future missions
+
+    
+    // Hidden role validation for future contracts
     DATA
     {
         type = bool
-        scienceStation_template_proven = true
+        ikeResourceFacility_resourceProductionRole = true
         persist = true
     }
     
-    // Objectives - Deploy and test orbital station
+//==========================================================================================
+// Validation Parameters
+//==========================================================================================
+    
     PARAMETER
     {
-        name = StationDeployment
+        name = DunaISRUDeployment
         type = VesselParameterGroup
-        title = Deploy Prototype Science Station
-        
-        define = Minmus Science Station
-        
+        title = Develop Ike ISRU Lander
+
+        define = Ike ISRU Lander
+
         PARAMETER
         {
-            name = StationOrbit
-            type = Orbit
-            targetBody = Minmus
-            minAltitude = 30000
-            maxAltitude = 100000
+            name = HasDrills
+            type = PartValidation
+            partModule = ModuleResourceHarvester
+            minCount = 2
+            title = Ore Extraction Systems (minimum 2)
+	        hideChildren = true 
         }
         
         PARAMETER
         {
-            name = HasScienceLab
+            name = HasConverters
             type = PartValidation
-            partModule = ModuleScienceLab
+            partModule = ModuleResourceConverter
             minCount = 1
+            title = Fuel Processing Systems
+	        hideChildren = true 
         }
         
         PARAMETER
         {
-            name = HasDockingPorts
-            type = PartValidation
-            partModule = ModuleDockingNode
-            minCount = 3
+            name = HasOreStorage
+            type = HasResourceCapacity
+            resource = Ore
+            minQuantity = 500.0
+            title = Ore Storage Capacity (500+ units)
+	        hideChildren = true 
+        }
+        
+        PARAMETER
+        {
+            name = HasFuelStorage
+            type = HasResourceCapacity
+            resource = LiquidFuel
+            minQuantity = 300.0
+            title = Fuel Storage Capacity (300+ units)
+	        hideChildren = true 
+        }
+        
+        PARAMETER
+        {
+            name = HasOxidizerStorage
+            type = HasResourceCapacity
+            resource = Oxidizer
+            minQuantity = 300.0
+            title = Oxidizer Storage Capacity (300+ units)
+	        hideChildren = true 
         }
         
         PARAMETER
@@ -91,55 +124,20 @@ CONTRACT_TYPE
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
             minCount = 2
-        }
-        
-        PARAMETER
-        {
-            name = HasCommunications
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasCrewCapacity
-            type = PartValidation
-            partModule = ModuleCommand
-            minCount = 1
+            title = Power Generation Systems (minimum 2)
+	        hideChildren = true 
         }
 
         PARAMETER
-        {
-            name = HasConverter
-            type = PartValidation
-            partModule = ModuleResourceConverter
-            minCount = 1
-        }
-    }
-    
-    PARAMETER
-    {
-        name = SupplyMission
-        type = VesselParameterGroup
-        title = Supply Craft Docking Test
-        
-        define = Station Supply Craft
-        
-        PARAMETER
-        {
-            name = DockWithStation
-            type = Docking
-            vessel = Minmus Science Station
-        }
-        
-        PARAMETER
-        {
-            name = HasSupplies
-            type = PartValidation
-            partModule = ModuleScienceContainer
-            minCount = 1
-        }
+	    {
+	        name = EmptyOreTanks
+	        type = HasResource
+	        resource = Ore
+	        maxQuantity = 5.0
+	        title = Land with empty ore tanks
+	        hideChildren = true 
+	    }
+
         
         PARAMETER
         {
@@ -147,17 +145,101 @@ CONTRACT_TYPE
             type = PartValidation
             partModule = ModuleDockingNode
             minCount = 1
+            title = Docking Infrastructure for Fuel Transfer
+	    hideChildren = true 
         }
     }
-    
+//==========================================================================================
+// Objectives - Deploy validated ISRU technology
+//========================================================================================== 
     
     PARAMETER
     {
-        name = ScienceProcessing
-        type = CollectScience
-        targetBody = Minmus
-        recoveryMethod = Transmit
-        title = Demonstrate Science Processing
-        notes = Process and transmit science data to validate laboratory operations.
+        name = ResourceFacilityGroup
+        type = VesselParameterGroup
+        title = Deploy and Test Ike Resource Extraction Systems
+        
+        // define = Ike ISRU Lander
+        
+        PARAMETER
+        {
+            name = LandOnIke
+            type = ReachState
+            targetBody = Ike
+            situation = LANDED
+	        title = Land on Ike
+	        hideChildren = true 
+        }
+    
+        PARAMETER
+        {
+            name = HasOreStorage
+            type = HasResource
+            resource = Ore
+            minQuantity = 500.0
+            title = Mine 500 units of regolith
+	    hideChildren = true 
+        }
+    }
+//========================================================================================== 
+
+    PARAMETER
+    {
+        name = ResourceFacilityGroup
+        type = VesselParameterGroup
+        title = Refuel Lander for Orbital Insertion 
+      //  vessel = Ike ISRU Lander
+        notes = Demonstrate fuel production from local resources using validated ISRU systems.
+
+	    PARAMETER
+	    {
+	        name = FuelProductionDemo
+	        type = HasResource
+	        resource = LiquidFuel
+	        minQuantity = 400.0
+	        title = Produce 400 units of Liquid Fuel
+	        hideChildren = true 
+
+	    }
+
+	    PARAMETER
+	    {
+	        name = OxidizerProductionDemo
+	        type = HasResource
+	        resource = Oxidizer
+            minQuantity = 400.0
+	        title = Produce 400 units of Oxidizer
+	        hideChildren = true 
+	    }
+    }
+        
+//========================================================================================== 
+
+    PARAMETER
+    {
+        name = FuelTransferTest
+        type = VesselParameterGroup
+        vessel = Ike ISRU Lander
+        title = Fuel Transfer Operations Test
+        notes = Demonstrate complete propellant production capability for system operations.
+        // define = Ike Resource Facility //disabled for debugging 
+        
+        PARAMETER
+        {
+            name = OnIke
+            type = Orbit
+            targetBody = Ike
+            minAltitude = 10000
+            hidden = true
+        }
+
+        PARAMETER
+        {
+            name = DockWithFacility
+            type = Docking
+            // vessel = Ike ISRU Lander
+            // defineDockedVessel = Ike Resource Facility //disabled for debugging 
+        }
+        
     }
 }
