--- a/Contracts/RF1_2c_IkeEnhancedISRU.cfg
+++ b/Contracts/RF1_2c_IkeEnhancedISRU.cfg
@@ -135,7 +135,7 @@ CONTRACT_TYPE
     {
         name = EnhancedProduction
         type = HasResource
-        vessel = Ike Enhanced Resource Facility
+        // vessel = Ike Enhanced Resource Facility // find better tracker
         resource = LiquidFuel
         minQuantity = 600.0
         title = Demonstrate enhanced fuel production (600+ units)
@@ -147,7 +147,7 @@ CONTRACT_TYPE
     {
         name = MultipleFuelProduction
         type = HasResource
-        vessel = Ike Enhanced Resource Facility
+        // vessel = Ike Enhanced Resource Facility // find better tracker
         resource = MonoPropellant
         minQuantity = 150.0
         title = Demonstrate monopropellant production (150+ units)
