--- a/Contracts/RF1_3a_IkePermanentHabitat.cfg
+++ b/Contracts/RF1_3a_IkePermanentHabitat.cfg
@@ -187,7 +187,7 @@ CONTRACT_TYPE
     {
         name = CrewDeployment
         type = HasCrew
-        vessel = Ike Research Base
+        // vessel = Ike Research Base // find better solution
         minCrew = 3
         title = Deploy initial research crew
         notes = Establish permanent crew presence at Ike research base.
