--- a/Contracts/RF1_4c_DunaSurfaceBase.cfg
+++ b/Contracts/RF1_4c_DunaSurfaceBase.cfg
@@ -219,7 +219,7 @@ CONTRACT_TYPE
     {
         name = BaseOperations
         type = HasCrew
-        vessel = Duna Surface Base
+       // vessel = Duna Surface Base // find better solution
         minCrew = 4
         title = Deploy crew to Duna Surface Base
         notes = Establish permanent crew presence on Duna surface.
