--- a/Contracts/RF1_1b_DunaCommsNetwork.cfg
+++ b/Contracts/RF1_1b_DunaCommsNetwork.cfg
@@ -1,205 +1,146 @@
 CONTRACT_TYPE
 {
-    name = RFP1_1b_PrecisionLanding
-    title = RFP1.1b: "Precision Landing Technology"
+    name = RF1_1b_DunaCommsNetwork
+    title = RF1.1b: "Duna Communications Network"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Landing Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Precision Surface Probe Landing Systems\n\nOur upcoming Duna missions will require precise landing capabilities to deploy surface probes at specific locations of scientific interest. Before committing to interplanetary deployment, we must validate our precision landing technology and surface operations protocols.\n\nThis pathfinder mission will test precision landing systems by deploying probes to specific coordinates across different Kerbin biomes. The varied terrain and environmental conditions will provide comprehensive validation of our landing technology before Duna deployment.\n\nYour objective is to demonstrate precision landing within 500 meters of designated targets, prove surface science operations capability, and validate probe survival and communication systems for extended operations.
+    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Communications Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Duna System Communications Infrastructure\n\nThe Duna transfer window is now open. Your objective is to establish the communications network in the Duna system using the proven relay constellation technology validated in RFP1.1a.\n\nThis network will provide continuous coverage throughout the Duna system, enabling coordination between all deployed assets and maintaining reliable contact with Kerbin. The constellation must integrate with the existing heliocentric communications infrastructure and provide redundant coverage for mission-critical operations.\n\nDeploy the validated communications hub configuration to create comprehensive system-wide coverage that will support all future Duna operations.
     
-    notes = Technology Validation Requirements:\n\nPrecision Landing Systems\nLand probes at 3 specific coordinates on Kerbin in different biomes, demonstrating precision within 500m of target.\n\nSurface Science Operations\nTest surface science operations and data transmission from landed probes to validate scientific capability.\n\nProbe Survival and Operations\nProve probe survival and operation for minimum 10 days to validate extended surface mission capability.\n\nSurface-to-Orbit Communications\nDemonstrate reliable communication between surface assets and orbital relay infrastructure.
+    notes = Deployment Requirements:\n\nRelay Constellation Deployment\nDeploy the proven communications constellation technology (RFP1.1a) to provide continuous Duna system coverage.\n\nHeliocentric Integration\nIntegrate with existing heliocentric communications infrastructure for interplanetary transmission.\n\nHigh-Gain Antenna Systems\nImplement high-gain antenna systems for reliable long-range transmission to Kerbin and system-wide coverage.\n\nRedundant Coverage\nEstablish redundant communication pathways to ensure mission-critical reliability for ongoing operations.
     
-    synopsis = Validate precision landing and surface operations technology using Kerbin as test environment.
+    synopsis = Deploy proven communications technology to establish comprehensive Duna system network.
     
-    completedMessage = Outstanding! The precision landing technology has been successfully validated. All surface probes demonstrated accurate landing capability and reliable operations. The technology is ready for interplanetary deployment. RFP1.1c is now available.
+    completedMessage = Duna communications network successfully established! Continuous system coverage operational with reliable Kerbin connectivity. All future missions can depend on this communications infrastructure.
     
     // Contract parameters
     agent = Lowne Aerospace
     group = RedFrontier
     
-    // Contract requirements
-    minExpiry = 1460
-    maxExpiry = 1460
-    deadline = 365
+    // Contract requirements - transfer window timing
+    minExpiry = 730
+    maxExpiry = 730
+    deadline = 547
     cancellable = true
     declinable = true
     autoAccept = true
-    prestige = Trivial
+    prestige = Significant
     maxCompletions = 1
     maxSimultaneous = 1
     
-    // Available after RFP1.1a completion
+    // Available after all pathfinders complete
     REQUIREMENT
     {
         name = CompleteContract
         type = CompleteContract
-        contractType = RFP1_1a_InterplanetaryComms
+        contractType = RFP1_1e_ResourceExtraction
     }
     
-    // Rewards - pathfinder level
-    advanceFunds = 50000.0
-    rewardFunds = 100000.0
+    // Verify communications technology was validated
+    
+    // Rewards - deployment mission level
+    advanceFunds = 100000.0
+    rewardFunds = 200000.0
     rewardScience = 150.0
-    rewardReputation = 20.0
+    rewardReputation = 40.0
     
     // Target Body
-    targetBody = Kerbin
+    targetBody = Duna
     
+    
+    // Hidden role validation for future contracts
+    DATA
+    {
+        type = bool
+        dunaCommHub_communicationsRole = true
+        persist = true
+    }
+    
+//==========================================================================================
+// Validation Parameters
+//==========================================================================================
+            
+        PARAMETER
+        {
+            name = HasHighGainAntenna
+            type = PartValidation
+            partModule = ModuleDataTransmitter
+            minCount = 2
+            title = Each Satellite has 2 High-Gain Antenna Arrays
+	    hideChildren = true
+        }
+        
+        PARAMETER
+        {
+            name = HasPowerGeneration
+            type = PartValidation
+            partModule = ModuleDeployableSolarPanel //tweak to accept RTG power
+            minCount = 2
+            title = Each Satellite has 2 Power Generation Systems
+	    hideChildren = true
+        }
+    }
+//==========================================================================================
+// Objectives - Deploy validated communications technology
+//========================================================================================== 
+    
+    PARAMETER
+    {
+        name = CommHubGroup
+        type = VesselParameterGroup
+        title = Deploy Duna Communications Hub
+        
+        define = Duna Communications Hub
+        
+        PARAMETER
+        {
+            name = CommOrbit
+            type = Orbit
+            targetBody = Duna
+            minAltitude = 300000
+            maxAltitude = 800000
+        }
+    }
+    
+//========================================================================================== 
 
-    
-    // Objectives - Land probes at specific coordinates in different biomes
     PARAMETER
     {
-        name = ProbeGrasslands
+        name = RelaySatellite1
         type = VesselParameterGroup
-        title = Deploy Probe 1 (Grasslands)
+        title = Deploy Relay Satellite 1 (Polar Coverage)
         
-        define = Precision Probe 1
-        
-        PARAMETER
-        {
-            name = ReachStateGrasslands
-            type = ReachState
-            targetBody = Kerbin
-            situation = LANDED
-            biome = Grasslands
-        }
+        define = Duna Relay 1
         
         PARAMETER
         {
-            name = HasScienceExperiments1
-            type = PartValidation
-            partModule = ModuleScienceExperiment
-            minCount = 2
-        }
-        
-        PARAMETER
-        {
-            name = HasPower1
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasAntenna1
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = CollectScienceGrasslands
-            type = CollectScience
-            targetBody = Kerbin
-            situation = SrfLanded
-            biome = Grasslands
-            recoveryMethod = Transmit
+            name = PolarOrbit
+            type = Orbit
+            targetBody = Duna
+            minAltitude = 500000
+            maxAltitude = 1000000
+            minInclination = 80
+            maxInclination = 100
         }
     }
     
+//========================================================================================== 
+
     PARAMETER
     {
-        name = ProbeDeserts
+        name = RelaySatellite2
         type = VesselParameterGroup
-        title = Deploy Probe 2 (Deserts)
+        title = Deploy Relay Satellite 2 (Equatorial Coverage)
         
-        define = Precision Probe 2
-        
-        PARAMETER
-        {
-            name = ReachStateDeserts
-            type = ReachState
-            targetBody = Kerbin
-            situation = LANDED
-            biome = Deserts
-        }
+        define = Duna Relay 2
         
         PARAMETER
         {
-            name = HasScienceExperiments2
-            type = PartValidation
-            partModule = ModuleScienceExperiment
-            minCount = 2
-        }
-        
-        PARAMETER
-        {
-            name = HasPower2
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasAntenna2
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = CollectScienceDeserts
-            type = CollectScience
-            targetBody = Kerbin
-            situation = SrfLanded
-            biome = Deserts
-            recoveryMethod = Transmit
+            name = EquatorialOrbit
+            type = Orbit
+            targetBody = Duna
+            minAltitude = 200000
+            maxAltitude = 400000
+            minInclination = 0
+            maxInclination = 15
         }
     }
-    
-    PARAMETER
-    {
-        name = ProbeTundra
-        type = VesselParameterGroup
-        title = Deploy Probe 3 (Tundra)
-        
-        define = Precision Probe 3
-        
-        PARAMETER
-        {
-            name = ReachStateTundra
-            type = ReachState
-            targetBody = Kerbin
-            situation = LANDED
-            biome = Tundra
-        }
-        
-        PARAMETER
-        {
-            name = HasScienceExperiments3
-            type = PartValidation
-            partModule = ModuleScienceExperiment
-            minCount = 2
-        }
-        
-        PARAMETER
-        {
-            name = HasPower3
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasAntenna3
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = CollectScienceTundra
-            type = CollectScience
-            targetBody = Kerbin
-            situation = SrfLanded
-            biome = Tundra
-            recoveryMethod = Transmit
-        }
-    }
-    
 }
