--- a/Contracts/RF1_1c_DunaSurfaceSurvey.cfg
+++ b/Contracts/RF1_1c_DunaSurfaceSurvey.cfg
@@ -1,204 +1,199 @@
 CONTRACT_TYPE
 {
-    name = RFP1_1b_PrecisionLanding
-    title = RFP1.1b: "Precision Landing Technology"
+    name = RF1_1c_DunaSurfaceSurvey
+    title = RF1.1c: "Duna Surface Survey"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Landing Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Precision Surface Probe Landing Systems\n\nOur upcoming Duna missions will require precise landing capabilities to deploy surface probes at specific locations of scientific interest. Before committing to interplanetary deployment, we must validate our precision landing technology and surface operations protocols.\n\nThis pathfinder mission will test precision landing systems by deploying probes to specific coordinates across different Kerbin biomes. The varied terrain and environmental conditions will provide comprehensive validation of our landing technology before Duna deployment.\n\nYour objective is to demonstrate precision landing within 500 meters of designated targets, prove surface science operations capability, and validate probe survival and communication systems for extended operations.
+    description = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Surface Operations Division\nTO: Lowne Aerospace / Duna Operations Team\nSUBJECT: Duna Surface Probe Network Deployment\n\nThe Duna transfer window is now open. Your objective is to deploy surface probes across Duna using the proven precision landing technology validated in RFP1.1b.\n\nThese probes will establish our initial surface presence and conduct comprehensive scientific surveys across multiple biomes. The precision landing technology has been thoroughly tested, enabling accurate deployment to regions of scientific interest.\n\nDeploy a minimum of three surface probes to different Duna biomes, establish surface science operations, and create reliable surface-to-orbit communication links that integrate with the communications network being deployed in parallel missions.
     
-    notes = Technology Validation Requirements:\n\nPrecision Landing Systems\nLand probes at 3 specific coordinates on Kerbin in different biomes, demonstrating precision within 500m of target.\n\nSurface Science Operations\nTest surface science operations and data transmission from landed probes to validate scientific capability.\n\nProbe Survival and Operations\nProve probe survival and operation for minimum 10 days to validate extended surface mission capability.\n\nSurface-to-Orbit Communications\nDemonstrate reliable communication between surface assets and orbital relay infrastructure.
+    notes = Deployment Requirements:\n\nPrecision Landing Operations\nDeploy proven precision landing technology (RFP1.1b) to land probes in different biomes across Duna.\n\nSurface Science Operations\nEstablish surface science capability and data collection across diverse terrain types and environmental conditions.\n\nSurface-to-Orbit Communications\nCreate reliable communication links between surface assets and orbital infrastructure.\n\nMulti-Biome Coverage\nDeploy to minimum three different biomes to maximize scientific return and validate landing technology diversity.
     
-    synopsis = Validate precision landing and surface operations technology using Kerbin as test environment.
+    synopsis = Deploy proven precision landing technology to establish comprehensive surface probe network.
     
-    completedMessage = Outstanding! The precision landing technology has been successfully validated. All surface probes demonstrated accurate landing capability and reliable operations. The technology is ready for interplanetary deployment. RFP1.1c is now available.
+    completedMessage = Duna surface survey successfully completed! Multiple surface probes operational across different biomes with reliable communications. Surface science operations established and ready for expanded exploration.
     
     // Contract parameters
     agent = Lowne Aerospace
     group = RedFrontier
     
-    // Contract requirements
-    minExpiry = 1460
-    maxExpiry = 1460
-    deadline = 365
+    // Contract requirements - transfer window timing
+    minExpiry = 730
+    maxExpiry = 730
+    deadline = 547
     cancellable = true
     declinable = true
     autoAccept = true
-    prestige = Trivial
+    prestige = Significant
     maxCompletions = 1
     maxSimultaneous = 1
     
-    // Available after RFP1.1a completion
+    // Available after all pathfinders complete
     REQUIREMENT
     {
         name = CompleteContract
         type = CompleteContract
-        contractType = RFP1_1a_InterplanetaryComms
+        contractType = RFP1_1e_ResourceExtraction
     }
     
-    // Rewards - pathfinder level
-    advanceFunds = 50000.0
-    rewardFunds = 100000.0
-    rewardScience = 150.0
-    rewardReputation = 20.0
+   
+    
+    // Rewards - deployment mission level
+    advanceFunds = 120000.0
+    rewardFunds = 240000.0
+    rewardScience = 300.0
+    rewardReputation = 45.0
     
     // Target Body
-    targetBody = Kerbin
+    targetBody = Duna
     
 
+    // Hidden role validation for future contracts
+    DATA
+    {
+        type = bool
+        dunaProbes_surfaceOpsRole = true
+        persist = true
+    }
+
+//==========================================================================================
+// Validation Parameters
+//==========================================================================================
     
-    // Objectives - Land probes at specific coordinates in different biomes
     PARAMETER
     {
-        name = ProbeGrasslands
+        name = SurfaceProbeGroup
         type = VesselParameterGroup
-        title = Deploy Probe 1 (Grasslands)
-        
-        define = Precision Probe 1
-        
-        PARAMETER
-        {
-            name = ReachStateGrasslands
-            type = ReachState
-            targetBody = Kerbin
-            situation = LANDED
-            biome = Grasslands
-        }
-        
+        title = Develop Duna Optimized Surface Probes 
+        notes = [re-write]
+
         PARAMETER
         {
             name = HasScienceExperiments1
             type = PartValidation
             partModule = ModuleScienceExperiment
-            minCount = 2
+            minCount = 6
+            title = Each Probe has 2 Science Experiments
+	    hideChildren = true
         }
         
         PARAMETER
         {
-            name = HasPower1
+            name = HasPowerGeneration1
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
-            minCount = 1
+            minCount = 3
+            title = Each Probe has Power Generation
+	    hideChildren = true
         }
         
         PARAMETER
         {
-            name = HasAntenna1
+            name = HasCommunications1
             type = PartValidation
             partModule = ModuleDataTransmitter
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = CollectScienceGrasslands
-            type = CollectScience
-            targetBody = Kerbin
-            situation = SrfLanded
-            biome = Grasslands
-            recoveryMethod = Transmit
+            minCount = 3
+            title = Each Probe has Communications Equipment
+	    hideChildren = true
         }
     }
+
+//==========================================================================================
+// Objectives - Deploy validated precision landing technology
+//==========================================================================================     
     
     PARAMETER
     {
-        name = ProbeDeserts
+        name = SurfaceProbe1
         type = VesselParameterGroup
-        title = Deploy Probe 2 (Deserts)
+        title = Deploy Surface Probe 1 (Lowlands)
         
-        define = Precision Probe 2
+        define = Duna Surface Probe 1
         
         PARAMETER
         {
-            name = ReachStateDeserts
+            name = LandLowlands
             type = ReachState
-            targetBody = Kerbin
+            targetBody = Duna
             situation = LANDED
-            biome = Deserts
+            biome = Lowlands
+	    hidden = true
         }
-        
+                
         PARAMETER
         {
-            name = HasScienceExperiments2
-            type = PartValidation
-            partModule = ModuleScienceExperiment
-            minCount = 2
-        }
-        
-        PARAMETER
-        {
-            name = HasPower2
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasAntenna2
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = CollectScienceDeserts
+            name = CollectScienceLowlands
             type = CollectScience
-            targetBody = Kerbin
+            targetBody = Duna
             situation = SrfLanded
-            biome = Deserts
+            biome = Lowlands
             recoveryMethod = Transmit
+            title = Transmit Science Data from Duna Lowlands
+	    hideChildren = true
         }
     }
+
+//==========================================================================================
     
     PARAMETER
     {
-        name = ProbeTundra
+        name = SurfaceProbe2
         type = VesselParameterGroup
-        title = Deploy Probe 3 (Tundra)
+        title = Deploy Surface Probe 2 (Highlands)
         
-        define = Precision Probe 3
+        define = Duna Surface Probe 2
         
         PARAMETER
         {
-            name = ReachStateTundra
+            name = LandHighlands
             type = ReachState
-            targetBody = Kerbin
+            targetBody = Duna
             situation = LANDED
-            biome = Tundra
+            biome = Highlands
+	    hidden = true
         }
-        
+                
         PARAMETER
         {
-            name = HasScienceExperiments3
-            type = PartValidation
-            partModule = ModuleScienceExperiment
-            minCount = 2
-        }
-        
-        PARAMETER
-        {
-            name = HasPower3
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasAntenna3
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = CollectScienceTundra
+            name = CollectScienceHighlands
             type = CollectScience
-            targetBody = Kerbin
+            targetBody = Duna
             situation = SrfLanded
-            biome = Tundra
+            biome = Highlands
             recoveryMethod = Transmit
+            title = Transmit Science Data from Duna Highlands
+	    hideChildren = true
+        }
+    }
+    
+//==========================================================================================
+
+    PARAMETER
+    {
+        name = SurfaceProbe3
+        type = VesselParameterGroup
+        title = Deploy Surface Probe 3 (Polar Regions)
+        
+        define = Duna Surface Probe 3
+        
+        PARAMETER
+        {
+            name = LandPolar
+            type = ReachState
+            targetBody = Duna
+            situation = LANDED
+            biome = Poles
+	    hidden = true
+        }
+                
+        PARAMETER
+        {
+            name = CollectSciencePolar
+            type = CollectScience
+            targetBody = Duna
+            situation = SrfLanded
+            biome = Poles
+            recoveryMethod = Transmit
+            title = Transmit Science Data from Duna Polar
+	    hideChildren = true
         }
     }
     
